--- a/poweroptimus-website-nextjs/src/app/components/navbar/navbar.css
+++ b/poweroptimus-website-nextjs/src/app/components/navbar/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;500;600;700;800&display=swap');
+
 /* Wrapper to center the navbar */
 .navbar-container {
   width: 100%;
