update for solution page
from here we're going our folder structure in components

--- a/poweroptimus-website-nextjs/src/app/components/solution/hero.css
+++ b/poweroptimus-website-nextjs/src/app/components/solution/hero.css
@@ -46,10 +46,13 @@
 @media (max-width: 768px) {
   .hero-content h1 {
     font-size: 2rem;
+    margin-left: 2rem;
   }
 
   .hero-content p {
     font-size: 0.95rem;
+    margin-left: 2rem;
+
   }
 }
 
