key vertical page

--- a/poweroptimus-website-nextjs/src/app/components/solution/architecture-diagram.css
+++ b/poweroptimus-website-nextjs/src/app/components/solution/architecture-diagram.css
@@ -1,5 +1,6 @@
 .architecture-section {
-  padding: 60px 20px;
+  /* padding: 60px 20px; */
+  padding: 60px 168px;
   display: flex;
   justify-content: center;
   align-items: center;
