laptop fixed part 2 sun

--- a/poweroptimus-website-nextjs/src/app/components/key-verticals-page/key-vertical-hero.css
+++ b/poweroptimus-website-nextjs/src/app/components/key-verticals-page/key-vertical-hero.css
@@ -8,17 +8,21 @@
 .industry-content {
   max-width: 800px;
   /* margin: 0 auto; */
-  margin-left: 147px;
+  margin-left: 168px;
 }
 
 .industry-title {
-  font-size: 32px;
+  /* font-size: 32px; */
+  /* added */
+  font-size: 40px;
   color: #00529b;
   margin-bottom: 20px;
 }
 
 .industry-description {
-  font-size: 16px;
+  /* added font size: 16 px */
+  font-size: 16px; 
+  font-size: 20px;
   color: #333;
   line-height: 1.6;
 }
@@ -34,16 +38,31 @@
   .industry-description {
     font-size: 14px;
   }
+  .industry-content {
+  max-width: 800px;
+  /* margin: 0 auto; */
+  margin-left: 23px;
+}
 }
 
 /* Tablet */
 @media (min-width: 601px) and (max-width: 900px) {
   /* (optional) Keep same as base for now */
+  .industry-content {
+  max-width: 800px;
+  /* margin: 0 auto; */
+  margin-left: 45px;
+}
 }
 
 /* Laptop */
 @media (min-width: 901px) and (max-width: 1200px) {
   /* (optional) Keep same as base for now */
+  .industry-content {
+  max-width: 800px;
+  /* margin: 0 auto; */
+  margin-left: 78px;
+}
 }
 
 /* Desktop */
